peac_dev/force-app/main/default/objects/EFT_Alternate_Schedule__c/EFT_Alternate_Schedule__c.object-meta.xml
<CustomObject>
    <label>EFT Alternate Schedule</label>
    <nameField>
        <displayFormat>EFTAS-{0000}</displayFormat>
        <label>EFT Alternate Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EFT Alternate Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>