peac_dev/force-app/main/default/objects/EFT_Alternate_Schedule__c/fields/Next_Payments__c.field-meta.xml
<CustomField>
    <fullName>Next_Payments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Payments</label>
    <type>Date</type>
</CustomField>