peac_dev/force-app/main/default/objects/EFT_Alternate_Schedule__c/fields/Payments_Made__c.field-meta.xml
<CustomField>
    <fullName>Payments_Made__c</fullName>
    <description>Payments Made descripion</description>
    <label>Payments Made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>