peac_dev/force-app/main/default/objects/EFT_Alternate_Schedule__c/fields/Payments_Processed__c.field-meta.xml
<CustomField>
    <fullName>Payments_Processed__c</fullName>
    <label>Payments Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>