peac_dev/force-app/main/default/objects/EFT_Alternate_Schedule__c/fields/SEC_Code__c.field-meta.xml
<CustomField>
    <fullName>SEC_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SEC Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>