peac_dev/force-app/main/default/objects/EFT_Alternate_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>SEC_Code__c</columns>
    <columns>Next_Payments__c</columns>
    <columns>Payments_Made__c</columns>
    <columns>Payments_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>